--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,16 @@
 
 /* Your CSS Code here. */
+
+/* thead{
+    background-color:  brown;
+}
+tbody{
+    background-color:  aqua;
+}
 table,th,td{
-    border: 1px solid;
+    border: 1px solid black;
+}
+th,td{
     width: 100px;
     height: 20px;
-}
+} */
